--- a/fitness/src/main/resources/application.properties
+++ b/fitness/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=fitness
 
 
+# Spring Security Configuration
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMIN
+
+
 # Example for H2 database
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -10,4 +17,3 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.path=/h2-console
-
