--- a/fitness/pom.xml
+++ b/fitness/pom.xml
@@ -59,6 +59,22 @@
 <groupId>org.springframework.boot</groupId>
 <artifactId>spring-boot-starter-security</artifactId>
 </dependency>
+
+    <!-- Hibernate Validator -->
+    <dependency>
+        <groupId>org.hibernate.validator</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>6.2.0.Final</version> 
+    </dependency>
+
+    <!-- glassfish -->
+    <dependency>
+        <groupId>org.glassfish</groupId>
+        <artifactId>javax.el</artifactId>
+        <version>3.0.0</version> 
+    </dependency>
+
+
 <!--  Thymeleaf Security  -->
 <dependency>
 <groupId>org.thymeleaf.extras</groupId>
