--- a/fitness/src/main/resources/application.properties
+++ b/fitness/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.path=/h2-console
+
+spring.web.resources.static-locations=classpath:/static/
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
