--- a/fitness/src/main/resources/application.properties
+++ b/fitness/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.web.resources.static-locations=classpath:/static/
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+server.port=${PORT:8080}
