--- a/fitness/src/main/resources/application.properties
+++ b/fitness/src/main/resources/application.properties
@@ -1,26 +1,29 @@
 spring.application.name=fitness
 
-
 # Spring Security Configuration
 spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=ADMIN
 
-
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
+# PostgreSQL configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/fitness
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.h2.console.path=/h2-console
 
+# Thymeleaf Configuration
 spring.web.resources.static-locations=classpath:/static/
-
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 server.port=${PORT:8080}
+
+#  H2 for testing:
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
